--- a/power-bi/02.Getting_started.md
+++ b/power-bi/02.Getting_started.md
@@ -109,6 +109,7 @@ Imagine for a moment that this dataset is a person, an expert that remember ever
 - What percentage of the population have filled a tax declaration ?
 - What percentage of the population has declared zero income ?
 - In what municipalities the habitants are reporting higher income? Why?
+- Which region pays more taxes?
 
 Crunching these numbers from the available information on the dataset, could help you to build a bigger picture of the economy of Belgium.
 
