--- a/AI Prompt/2. AI Pair Programming 101.md
+++ b/AI Prompt/2. AI Pair Programming 101.md
@@ -2,7 +2,7 @@
 
 Pair programming used to be two people sitting physically next to each other, writing code together. Or all by yourself, debugging by talking to a [rubber duck](https://en.wikipedia.org/wiki/Rubber_duck_debugging). Time has moved on. These days, and probably even more so in the future, pair programming is conceived as yourself programming with a _virtual_ code assistant. It will become an inevitable part of a modern programmer's workflow.
 
-<img src="bigducks.png" alt="Two rubber ducks in Hong Kong" width="500"/>
+<img src="img/bigducks.png" alt="Two rubber ducks in Hong Kong" width="500"/>
 
 This brief lesson dives into how to set up and interact with such a virtual assistant, the power and dangers of using one, and a couple of general tips and tricks.
 
