--- a/NLP/01-PreprocessingNLP/01-tokenization.ipynb
+++ b/NLP/01-PreprocessingNLP/01-tokenization.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,11 +48,31 @@
     "import spacy\n",
     "\n",
     "# Load the model\n",
-    "nlp = #TO COMPLETE\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
     "\n",
     "# Store the tokens in doc\n",
     "\n",
-    "doc = #TO COMPLETE\n"
+    "doc = nlp(text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "spacy.tokens.doc.Doc"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(doc)\n"
    ]
   },
   {
@@ -64,9 +84,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "When\n",
+      "Sebastian\n",
+      "Thrun\n",
+      "started\n",
+      "working\n",
+      "on\n",
+      "self\n",
+      "-\n",
+      "driving\n",
+      "cars\n",
+      "at\n",
+      "Google\n",
+      "in\n",
+      "2007\n",
+      ",\n",
+      "few\n",
+      "people\n",
+      "outside\n",
+      "of\n",
+      "the\n",
+      "company\n",
+      "took\n",
+      "him\n",
+      "seriously\n",
+      ".\n",
+      "“\n",
+      "I\n",
+      "can\n",
+      "tell\n",
+      "you\n",
+      "very\n",
+      "senior\n",
+      "CEOs\n",
+      "of\n",
+      "major\n",
+      "American\n",
+      "car\n",
+      "companies\n",
+      "would\n",
+      "shake\n",
+      "my\n",
+      "hand\n",
+      "and\n",
+      "turn\n",
+      "away\n",
+      "because\n",
+      "I\n",
+      "was\n",
+      "n’t\n",
+      "worth\n",
+      "talking\n",
+      "to\n",
+      ",\n",
+      "”\n",
+      "said\n",
+      "Thrun\n",
+      ",\n",
+      "in\n",
+      "an\n",
+      "interview\n",
+      "with\n",
+      "Recode\n",
+      "earlier\n",
+      "this\n",
+      "week\n",
+      ".\n"
+     ]
+    }
+   ],
    "source": [
     "for token in doc:\n",
     "    print(token)"
@@ -159,9 +252,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "spacy",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "spacy"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
