--- a/NLP/01-PreprocessingNLP/03-lemmatization.ipynb
+++ b/NLP/01-PreprocessingNLP/03-lemmatization.ipynb
@@ -38,13 +38,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'those child be play . this game , those game , I play he play'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Can you lemmatize this sentence with Spacy and / or NLTK?\n",
     "\n",
-    "my_sentence = \"Those children are playing. this game, those games, I play he plays\"\n"
+    "my_sentence = \"Those children are playing. this game, those games, I play he plays\"\n",
+    "\n",
+    "import spacy\n",
+    "\n",
+    "nlp=spacy.load('en_core_web_sm')\n",
+    "\n",
+    "doc=nlp(my_sentence)\n",
+    "\" \".join([token.lemma_ for token in doc])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Those', 'children', 'are', 'playing', '.', 'this', 'game', ',', 'those', 'games', ',', 'I', 'play', 'he', 'plays']\n",
+      "Those child are playing . this game , those game , I play he play\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\macit\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\macit\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download('wordnet')\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "lemmatizer=WordNetLemmatizer()\n",
+    "\n",
+    "nltk.download('punkt')\n",
+    "\n",
+    "word_list=nltk.word_tokenize(my_sentence,\"english\")\n",
+    "print(word_list)\n",
+    "\n",
+    "lemmatized_output=' '.join([lemmatizer.lemmatize(w) for w in word_list])\n",
+    "print(lemmatized_output)"
    ]
   },
   {
@@ -77,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
