--- a/NLP/02-ModelingNLP/02-named-entity-recognition.ipynb
+++ b/NLP/02-ModelingNLP/02-named-entity-recognition.ipynb
@@ -29,9 +29,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">BeCode’s mission : Enabling \n",
+       "<mark class=\"entity\" style=\"background: #bfe1d9; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    tomorrow\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">DATE</span>\n",
+       "</mark>\n",
+       "’s digital talents to blossom.We believe that education makes anything possible.Since \n",
+       "<mark class=\"entity\" style=\"background: #bfe1d9; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    2017\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">DATE</span>\n",
+       "</mark>\n",
+       ", \n",
+       "<mark class=\"entity\" style=\"background: #7aecec; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    BeCode\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">ORG</span>\n",
+       "</mark>\n",
+       " has been offering inclusive coding bootcamps for jobseekers to become developers in partnership with \n",
+       "<mark class=\"entity\" style=\"background: #bfeeb7; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Simplon\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">PRODUCT</span>\n",
+       "</mark>\n",
+       ".</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Load the needed dependencies from SpaCy\n",
     "import spacy\n",
@@ -60,9 +93,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tomorrow: DATE\n",
+      "2017: DATE\n",
+      "BeCode: ORG\n",
+      "Simplon: PRODUCT\n"
+     ]
+    }
+   ],
    "source": [
     "# Loop over all the tokens preprocessed by SpaCy\n",
     "for token in doc:\n",
@@ -110,18 +154,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\macit\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package maxent_ne_chunker to\n",
+      "[nltk_data]     C:\\Users\\macit\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package maxent_ne_chunker is already up-to-date!\n",
+      "[nltk_data] Downloading package words to\n",
+      "[nltk_data]     C:\\Users\\macit\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package words is already up-to-date!\n",
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     C:\\Users\\macit\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping taggers\\averaged_perceptron_tagger.zip.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Named Entities:\n",
+      "BeCode - ORGANIZATION\n",
+      "BeCode - ORGANIZATION\n",
+      "Simplon - PERSON\n"
+     ]
+    }
+   ],
    "source": [
-    "# Import NLTK\n",
+    "import nltk\n",
+    "from nltk import pos_tag, ne_chunk\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk import download\n",
     "\n",
-    "# Preprocess the text\n",
+    "\n",
+    "# Download the necessary NLTK resources\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('maxent_ne_chunker')\n",
+    "nltk.download('words')\n",
+    "nltk.download('averaged_perceptron_tagger')\n",
+    "\n",
+    "# Sample text\n",
     "text = \"BeCode’s mission: Enabling tomorrow’s digital talents to blossom.We believe that education makes anything possible. Since 2017, BeCode has been offering inclusive coding bootcamps for jobseekers to become developers in partnership with Simplon.\"\n",
+    "# Tokenize the text and perform part-of-speech tagging\n",
+    "tokens = word_tokenize(text)\n",
+    "pos_tags = pos_tag(tokens)\n",
     "\n",
+    "# Perform named entity recognition using the ne_chunk function\n",
+    "tree = ne_chunk(pos_tags)\n",
     "\n",
-    "# Extract entities\n",
+    "# Extract named entities\n",
+    "named_entities = []\n",
+    "for subtree in tree:\n",
+    "    if isinstance(subtree, nltk.Tree):\n",
+    "        entity = \" \".join([word for word, tag in subtree.leaves()])\n",
+    "        label = subtree.label()\n",
+    "        named_entities.append((entity, label))\n",
     "\n",
+    "# Print the named entities\n",
+    "print(\"Named Entities:\")\n",
+    "for entity, label in named_entities:\n",
+    "    print(f\"{entity} - {label}\")\n",
     "\n",
     "# Print entities detected\n",
     "\n"
@@ -166,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
